fix(header): change header view on mobile

--- a/app/apps/general/styles/landing/_intro.scss
+++ b/app/apps/general/styles/landing/_intro.scss
@@ -38,6 +38,16 @@
    background-color: $green;
  }
 
+ .navbar-toggle {
+    margin-top: 15px;
+    border: 1px solid rgba(255, 255, 255, 1);
+ }
+
+ .icon-bar {
+    border: 1px solid #FFF;
+ }
+
+
 
 .tel-nos{
   min-width: 220px; 
